...
                    Text(
                      _formType == FormType.login
                          ? 'Еще нет аккаунта?'
                          : 'Уже есть аккаунт?',
                    ),
                    FlatButton(
                      key: Key('screenSwitch'),
                      child: RichText(
                        text: TextSpan(children: [
                          TextSpan(
                            text: _formType == FormType.login
                                ? 'Регистрация'
                                : 'Войти',
...
